--- a/style/style.scss
+++ b/style/style.scss
@@ -63,7 +63,7 @@ body {
     color: inherit;
     font-size: 18px;
   }
-  &:hover {
+  a:hover {
     color: $tersier-color;
   }
 }
@@ -79,13 +79,6 @@ body {
   max-width: 1200px;
   margin: 0 auto;
 }
-footer{
-    position: -webkit-sticky;
-    position: sticky;
-    left: 0;
-    bottom: 0;
-    right: 0;
-}
 
 #anim-text {
   position: absolute;
@@ -93,7 +86,6 @@ footer{
   left: 30%;
   transform: translate(-50%, -50%);
   fill: transparent;
-  background-color: red;
 }
 
 .square-shape {
@@ -107,6 +99,17 @@ footer{
   border: 2px solid $premier-color;
   box-sizing: border-box;
   border-radius: 21px;
+  transform: rotate(-30deg);
+}
+
+.pic-shape {
+  position: fixed;
+  left: 75%;
+  top: 150px;
+  width: 302px;
+  height: 302px;
+  background: url("/src/gimnas-shape-.png");
+  box-sizing: border-box;
   transform: rotate(-30deg);
 }
 
@@ -135,7 +138,6 @@ footer{
   background-color: transparent;
   border: 2px solid $secondary-color;
 }
-
 
 // img {
 //   position: absolute;
