--- a/style/style.scss
+++ b/style/style.scss
@@ -72,19 +72,17 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 100;
+  height: 100px;
+  
 }
 
-.homepage {
-  max-width: 1200px;
-  margin: 0 auto;
-}
+
 
 .container{
   position: relative;
   max-width: 1440px;
   margin: auto;
-  padding: 2em;
+  padding: 0 2em;
   
 }
 
